# hakaton18

./: pyproject.toml
hakaton18/: 12_continuous.las  12_continuous.xlsx  visualisation.py  Отбивки пласта АС11-2.xlsx
hakaton18/las/: 12_continuous.las  12_discrete.las  13_continuous.las  13_discrete.las  14_continuous.las  14_discrete.las  15_continuous.las  15_discrete.las  16_continuous.las  16_discrete.las  17_continuous.las  17_discrete.las  18_continuous.las  18_discrete.las  19_continuous.las  19_discrete.las  20_continuous.las  20_discrete.las  22_continuous.las  22_discrete.las  23_continuous.las  23_discrete.las  24_continuous.las  24_discrete.las  25_continuous.las  25_discrete.las  26_continuous.las  26_discrete.las  27_continuous.las  27_discrete.las  28_continuous.las  28_discrete.las  29_continuous.las  29_discrete.las  30_continuous.las  30_discrete.las  31_continuous.las  31_discrete.las  33_continuous.las  33_discrete.las  (+42 more)
