[tool.poetry]
name = "hakaton18"
version = "0.1.0"
description = ""
authors = ["Leonid <leo.semenov1980@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lasio = "^0.31"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
